--- a/task1/index.html
+++ b/task1/index.html
@@ -29,6 +29,28 @@
             <div>Contact</div>
         </div>
     </div>
+    <div class="template-section"><!--БАННЕР-->
+        <div class="template-section-overlay"></div>
+        <div class="template-section-text">
+            <div class="template-section-text-logo">
+                <img src="header-section-logo.svg" alt="">
+            </div>
+            <div class="template-section-text-title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</div>
+            <div class="template-section-text-dash"></div>
+            <div class="template-section-text-capture">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+            <button class="template-section-text-button">Download</button>
+        </div>
+        <div class="template-section-login">
+            <div class="template-section-login-title">Try Your<span class="login-title-color"> FREE</span> Trial Today
+            </div>
+            <form class="template-section-login-forms">
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
+            </form>
+            <button class="template-section-login-button">Get Started</button>
+        </div>
+    </div>
     <div class="social-section"><!--CОЦСЕТИ-->
         <div class="social-section-text">
             <div class="social-section-header">Social Media</div>
@@ -246,6 +268,24 @@
             <div class="color-overlay"></div>
         </div>
     
+    <div class="contact-section"> <!--КОНТАКТЫ-->
+        <div class="contact-section-header">
+            <div class="contact-section-header-title">contact us</div>
+            <div class="contact-section-header-dash"></div>
+            <div class="contact-section-header-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        </div>
+        <form class="contact-section-forms" action="">
+            <div class="contact-section-forms-login" action="">
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
+            </div>
+            <div class="contact-section-forms-message" action="">
+                <input type="text" placeholder="Message">
+            </div>
+        </form>
+        <button class="contact-section-button">Send Message</button>
+    </div>
     <div class="footer-section"> <!--ПОДВАЛ-->
         <div class="footer-section-icons">
             <img src="facebook.svg" alt="">
